# midikontrollaz

./: .gitignore  README.md
korg_nanokontrol/: module_spec.txt  plugin.json
mvave_smc_pad/: CMakeLists.txt  Makefile  module_spec.txt  plugin.json  plugin.json.in
mvave_smc_pad/.claude/: settings.local.json
mvave_smc_pad/src/: SmcPad.cpp  plugin.cpp  plugin.hpp
